# life-events-platform

./: .cfnlintrc.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .spectral.yaml  .trivyignore  .trivyignore.docker  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  build.gradle  build.gradle.kts  dependencies.gradle  deploy.sh  docker-compose-full.yml  docker-compose-local.yml  docker-compose.yml  gradle.lockfile  gradle.properties  groIngestionStepFunction.asl.json  postgres-suppressions.xml  pyproject.toml  reactive-suppressions.xml  read-message.sh  samconfig.toml  settings.gradle  sonar.gradle  template.yaml  test.txt  trivy.yaml
.github/: dependabot.yml
.run/: Start demo rds tunnel.run.xml  Start dev rds tunnel.run.xml
ci/: appspec-template.json  appspec.json
doc/: acquiring-data-from-the-service.md  connecting-to-hosted-databases.md  data-flows.md  data-retention-policy.md  dependency-management.md  how-to-onboard-a-client.md  how-to-onboard-a-supplier.md  how-to-onboard-an-acquirer.md  infrastructure.md  investigating-in-aws.md  new-hosted-environment.md  onboarding.md  simulating-event-flows.md  vulnerability-management-and-suppression.md
frontend/: README.md  package-lock.json  package.json  server.ts  tsconfig.json
grafana/: .trivyignore  Dockerfile  docker-compose.yml  plugins-to-install.md  trivy.yaml
helm-deploy/: dev.yaml
kube/: gdx-data-share-poc-deployment.yaml  gdx-data-share-poc-svc.yaml
lambdas/: .trivyignore  build.gradle
lev-data/: Dockerfile  drop_not_nulls.sql  fix_lev_death_registration_ids.sql
(+1238 files in other folders)
