[tool.poetry]
name = "gdx-data-share-poc"
version = "0.1.0"
description = ""
authors = ["Oskar Williams <oskar.williams@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
botocore = "^1.29.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

